# winzy-extract

./: README.md  pyproject.toml
tests/: test_winzy_extract.py
winzy_extract/: __init__.py
