[project]
name = "winzy-extract"
version = "0.1"
description = "Extracts text from a file based on input and output line numbers"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-extract"
Changelog = "https://github.com/sukhbinder/winzy-extract/releases"
Issues = "https://github.com/sukhbinder/winzy-extract/issues"
CI = "https://github.com/sukhbinder/winzy-extract/actions"

[project.entry-points."winzy.plugins"]
extract = "winzy_extract:extract_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]
